<resources>
    <string name="app_name">GooApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_your_trip">Your Trips</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Ride Details Activity
    <string name="ride_details_activity_text_1">Vehicle</string>
    <string name="ride_details_activity_text_2">Change</string>
    <string name="ride_details_activity_text_3">Cash</string>
    <string name="ride_details_activity_text_4">Share Trip Status</string>
    <string name="ride_details_activity_text_5">Share</string>
    <string name="ride_details_activity_text_6">Cancel ride</string>


    //User Settings Fragment
    <string name="account_setting_fragment_text_1">Favourites</string>
    <string name="account_setting_fragment_text_2">Home</string>
    <string name="account_setting_fragment_text_3">Office</string>
    <string name="account_setting_fragment_text_4">More Saved Places</string>
    <string name="account_setting_fragment_text_5">Safety</string>
    <string name="account_setting_fragment_text_6">Manage Trusted Contacts</string>
    <string name="account_setting_fragment_text_7">Share your trip status with family and friends in a single tap.
    </string>
    <string name="account_setting_fragment_text_8">Privacy</string>
    <string name="account_setting_fragment_text_9">Manage the data you share with us</string>
    <string name="account_setting_fragment_text_10">Security</string>
    <string name="account_setting_fragment_text_11">Control your account security with 2-step verification</string>


    //Save Place Fragment
    <string name="save_place_fragment_text_1">Add Save Place</string>
    <string name="save_place_fragment_text_2">Get to your favorite destinations faster</string>


    //Edit Address Fragment
    <string name="edit_address_fragment_text_1">Name</string>
    <string name="edit_address_fragment_text_2">Home</string>
    <string name="edit_address_fragment_text_3">Address</string>
    <string name="edit_address_fragment_text_4">ADD</string>


    //Delete Address Dialog
    <string name="delete_address_dialog_text_1">Delete</string>
    <string name="delete_address_dialog_text_2">This will delete this location from your saved places.</string>
    <string name="delete_address_dialog_text_3">Cancel</string>
    <string name="delete_address_dialog_text_4">Delete</string>


    //rider rating dialog
    <string name="rider_rating_dialog_text_1">Enter Something</string>
    <string name="rider_rating_dialog_text_2">Submit</string>


    <string name="login_no">NUMBER</string>
    <string name="login_otp">OTP</string>
    <string name="login_next">NEXT</string>
    <string name="login_done">DONE</string>
    <string name="login_username">USERNAME</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_map_where_to">Where to?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="tv_motor_bike">Motorbike</string>
    <string name="tv_auto">Auto</string>
    <string name="tv_car">Car</string>
    <string name="dummy_text">Is simply dummy text of the printing and type setting industry</string>
    <string name="title_fragment_where_to">Where To?</string>
    <string name="title_fragment_choose_ride">Choose A Ride</string>
    <string name="title_fragment_trusted_contacts">Trusted Contacts</string>
    <string name="title_fragment_legal">Legal</string>
    <string name="title_fragment_edit_fragment">Edit Account</string>
    <string name="title_fragment_add_address">Add Address</string>
    <string name="title_fragment_past_trip">Past Trip</string>
    <string name="title_fragment_trip_details">Trip Details</string>
    <string name="dummy_text_trusted_contacts">Share your trip status with family and friends in a single tap.</string>
    <string name="text_add_trusted_contacts">ADD TRUSTED CONTACT</string>
    <string name="text_trusted_contacts">You can add up to 5 trusted contacts</string>
    <string name="text_terms_condition">Terms &amp; Conditions</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_naem">Name</string>
    <string name="text_phone_no">PhoneNumber</string>
    <string name="text_email">Email Address</string>
    <string name="text_address">Address</string>
    <string name="text_add">ADD</string>
    <string name="text_pickup_status">Confirm Your Pickup Spot</string>
    <string name="text_pickup_address">Enter Address</string>
    <string name="confirm_pickup_btn">Confirm Pickup</string>
    <string name="confirm_search_address_text">Search</string>
    <string name="text_help">Help</string>

    <!--for setting dialog-->
    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="enter_location_hint">Enter location</string>


    <!--for add trusted contact dialog-->
    <string name="trusted_contact_dialog_text_1">Add Contact</string>
    <string name="trusted_contact_dialog_text_2">Enter Name</string>
    <string name="trusted_contact_dialog_text_3">Enter Number</string>
    <string name="trusted_contact_dialog_text_4">Add Contact</string>




</resources>
