<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
>


    <TextView
            android:id="@+id/add_contact_text_view"
            android:text="@string/trusted_contact_dialog_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/segoe_ui"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <EditText
            android:id="@+id/contact_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_text_view"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/trusted_contact_dialog_text_2"/>
    <EditText
            android:id="@+id/contact_number_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_name_edittext"
            app:layout_constraintStart_toStartOf="@+id/contact_name_edittext"
            app:layout_constraintEnd_toEndOf="@+id/contact_name_edittext"
            android:hint="@string/trusted_contact_dialog_text_3"/>


    <Button
            android:id="@+id/add_contact_btn"
            android:text="@string/trusted_contact_dialog_text_4"
            android:layout_width="0dp"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_number_edittext"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:fontFamily="@font/segoe_ui" android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>