<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingBottom="14dp">
    <Button
            android:text="@string/delete_address_dialog_text_4"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/delete__btn"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cancel_btn" android:layout_marginEnd="8dp"
            android:fontFamily="@font/segoe_ui" android:background="@color/light_grey_text_color"
            android:textColor="@android:color/white" app:layout_constraintBottom_toBottomOf="@+id/cancel_btn"/>
    <TextView
            android:text="@string/delete_address_dialog_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView5" android:layout_marginTop="14dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/black" android:textSize="20sp"
            android:fontFamily="@font/segoe_ui" android:layout_marginStart="8dp"/>
    <TextView
            android:text='"Home"?'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_or_office_txt"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp" android:textSize="20sp" android:textColor="@android:color/black"
            android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="@string/delete_address_dialog_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:fontFamily="@font/segoe_ui" android:textSize="15sp" android:textColor="@android:color/black"/>
    <Button
            android:text="@string/delete_address_dialog_text_3"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/delete__btn"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:background="@color/delete_dialog_button_color_grey"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textColor="@android:color/black"
            android:textAllCaps="true" android:textSize="15sp" android:fontFamily="@font/segoe_ui"/>
</androidx.constraintlayout.widget.ConstraintLayout>

