<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.EditAddressFragment">


    <include
            android:id="@+id/include"
            layout="@layout/toolbar_app"
    />
    <TextView
            android:text="@string/edit_address_fragment_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="15sp" android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/adress_type_editText"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:textColorHint="@color/light_grey_text_color"
            android:hint="@string/edit_address_fragment_text_2" android:fontFamily="@font/segoe_ui"
            android:textSize="15sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"/>
    <TextView
            android:text="@string/edit_address_fragment_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/adress_type_editText"
            app:layout_constraintStart_toStartOf="@+id/adress_type_editText" android:textSize="15sp"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui"/>
<!--
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addressEditText" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4" android:textSize="15sp"
            android:fontFamily="@font/segoe_ui" android:textColorHint="@color/light_grey_text_color"
            android:hint="@string/edit_address_fragment_text_3"/>
-->




    <fragment
            android:id="@+id/place_autocomplete_fragment_address"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="@id/adress_type_editText"
            app:layout_constraintEnd_toEndOf="@+id/adress_type_editText"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
    />



    <Button
            android:text="@string/edit_address_fragment_text_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_edit_address" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="17dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="17dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>