<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".fragments.SavePlacesFragment">


    <include
            android:id="@+id/include"
            layout="@layout/toolbar_app"
    />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="215dp"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:elevation="2dp"
            android:id="@+id/cardView6">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/account_setting_fragment_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favourites_heading_txt"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/segoe_ui"/>


            <ImageView
                    android:src="@drawable/ic_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_heading_txt"
                    app:layout_constraintStart_toStartOf="@+id/favourites_heading_txt"/>

            <TextView
                    android:text="@string/account_setting_fragment_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/home_txt"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="8dp"
                    android:fontFamily="@font/segoe_ui" android:textSize="15sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    android:layout_marginBottom="2dp"/>

            <TextView
                    android:text="Is simply dummy text of the printing and typesetting  industry."
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/home_options"
                    android:id="@+id/home_details_txt" android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_txt"
                    app:layout_constraintStart_toStartOf="@+id/home_txt"
                    android:textColor="@color/light_grey_text_color" android:textSize="13sp"
                    android:fontFamily="@font/segoe_ui" android:maxLines="2" android:ellipsize="end"
                    android:layout_marginEnd="6dp" app:layout_constraintEnd_toStartOf="@+id/home_options"/>


            <ImageView
                    android:src="@drawable/ic_dotted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/home_options"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="12dp"/>


            <ImageView
                    android:src="@drawable/ic_office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7" android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_details_txt"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"/>


            <TextView
                    android:text="@string/account_setting_fragment_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/office_txt"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                    app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="8dp"
                    android:layout_marginBottom="2dp" android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/segoe_ui"/>


            <TextView
                    android:text="Is simply dummy text of the printing and typesetting  industry."
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/office_details_txt" android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/office_txt"
                    app:layout_constraintStart_toStartOf="@+id/office_txt" android:textSize="13sp"
                    android:textColor="@color/light_grey_text_color" android:fontFamily="@font/segoe_ui"
                    android:layout_marginEnd="6dp" app:layout_constraintEnd_toStartOf="@+id/office_options"
                    android:maxLines="2" android:ellipsize="end"/>

            <ImageView
                    android:src="@drawable/ic_dotted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/office_options"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/save_place_fragment_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_save_place_txt" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView6" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/light_grey_text_color" android:textSize="15sp"
            android:fontFamily="@font/segoe_ui" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/save_place_fragment_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/add_save_place_txt"
            app:layout_constraintStart_toStartOf="@+id/add_save_place_txt" android:textSize="13sp"
            android:textColor="@color/light_grey_text_color" android:fontFamily="@font/segoe_ui"/>


</androidx.constraintlayout.widget.ConstraintLayout>