<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <include
            layout="@layout/toolbar_app"
            android:id="@+id/toolbar_add_address"
    />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_add_address"
            app:cardElevation="3dp"
            android:id="@+id/cardview_personal_info"

    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:text="@string/text_naem"
                      android:textSize="@dimen/text_heading"
                      android:textColor="@color/textColor"
                      android:layout_marginStart="9.5dp"
                      android:layout_marginTop="14.5dp"
                      android:id="@+id/tv_label_name"

            />
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_label_name"
                      android:textSize="@dimen/text_heading"
                      android:layout_marginTop="9.5dp"
                      android:layout_marginStart="8dp"
                      android:layout_marginEnd="8dp"
                      android:hint="Home"
                      android:id="@+id/edtxt_name_edit_profile"
                      app:layout_constraintEnd_toEndOf="parent"/>


            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/edtxt_name_edit_profile"
                      android:text="@string/text_address"
                      android:textSize="@dimen/text_heading"
                      android:textColor="@color/textColor"
                      android:layout_marginStart="9.5dp"
                      android:layout_marginTop="25dp"
                      android:id="@+id/tv_label_phone_no"

            />
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/tv_label_phone_no"
                      android:textSize="@dimen/text_heading"
                      android:layout_marginTop="9.5dp"
                      android:layout_marginStart="8dp"
                      android:layout_marginEnd="8dp"
                      android:hint="Is simply dummy text of the printing"
                      android:id="@+id/edtxt_phone_no_edit_profile"
                      app:layout_constraintEnd_toEndOf="parent"/>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/textColor"
            android:background="@color/background_add_btn"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:textSize="@dimen/text_heading"
            android:id="@+id/btn_add_address"




    />


</androidx.constraintlayout.widget.ConstraintLayout>