<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <include
            layout="@layout/toolbar_app"
            android:id="@+id/toolbar_trusted_contacts"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/toolbar_trusted_contacts"
              android:text="@string/dummy_text_trusted_contacts"
              android:textSize="@dimen/text_heading"
              android:textColor="@color/textColor"
              android:layout_marginStart="9.5dp"
              android:layout_marginEnd="27dp"
              android:layout_marginTop="14.5dp"
              android:id="@+id/tv_label_trusted_contacts"

    />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardview_add_trusted_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_trusted_contacts"
            android:layout_marginTop="41dp"
            app:cardElevation="3dp"



    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_contact_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_trust_contacts_add"
                         android:background="@android:color/transparent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:id="@+id/btn_add_trusted_contacts"
                         android:layout_marginStart="20dp"

                         android:paddingTop="6dp"
                         app:layout_constraintTop_toTopOf="parent"

                         app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/btn_add_trusted_contacts"
                      app:layout_constraintTop_toTopOf="@id/btn_add_trusted_contacts"
                      android:text="@string/text_add_trusted_contacts"
                      android:textSize="@dimen/text_heading"
                      android:textColor="@color/textColor"
                      android:layout_marginStart="16dp"
                      android:layout_marginEnd="19dp"
                      app:layout_constraintBottom_toBottomOf="@+id/btn_add_trusted_contacts"
                      app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_trusted_contacts"
              app:layout_constraintTop_toBottomOf="@id/cardview_add_trusted_contact"
              app:layout_constraintStart_toStartOf="@id/cardview_add_trusted_contact"
              app:layout_constraintEnd_toEndOf="@id/cardview_add_trusted_contact"
              android:layout_marginTop="8dp"
              android:textSize="@dimen/text_heading"
              android:id="@+id/textView"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trusted_contact_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>